zellij-utils/src/snapshots/zellij_utils__setup__setup_test__default_config_with_no_cli_arguments-3.snap
---
source: zellij-utils/src/setup.rs
expression: "format!(\"{:#?}\", options)"
---
Options {
    simplified_ui: None,
    theme: None,
    theme_dark: None,
    theme_light: None,
    explicit_theme_hue: None,
    default_mode: None,
    default_shell: None,
    default_cwd: None,
    default_layout: None,
    layout_dir: None,
    theme_dir: None,
    mouse_mode: None,
    pane_frames: None,
    pane_frame_style: None,
    mirror_session: None,
    on_force_close: None,
    scroll_buffer_size: None,
    copy_command: None,
    copy_clipboard: None,
    copy_on_select: None,
    osc8_hyperlinks: None,
    scrollback_editor: None,
    session_name: None,
    attach_to_session: None,
    auto_layout: None,
    session_serialization: None,
    serialize_pane_viewport: None,
    scrollback_lines_to_serialize: None,
    styled_underlines: None,
    serialization_interval: None,
    disable_session_metadata: None,
    support_kitty_keyboard_protocol: None,
    support_kitty_graphics_protocol: None,
    web_server: None,
    web_sharing: None,
    stacked_resize: None,
    stacked_pane_list: None,
    show_startup_tips: None,
    show_release_notes: None,
    advanced_mouse_actions: None,
    mouse_scroll_resize: None,
    scroll_mode_sync: None,
    mouse_hover_effects: None,
    mouse_hover_tips: None,
    visual_bell: None,
    focus_follows_mouse: None,
    mouse_click_through: None,
    osc133_command_selection: None,
    word_separators: None,
    host_notification_protocol: None,
    web_server_ip: None,
    web_server_port: None,
    web_server_cert: None,
    web_server_key: None,
    enforce_https_for_localhost: None,
    post_command_discovery_hook: None,
    client_async_worker_tasks: None,
    nested_session_handling: None,
    dangerously_enable_paste_buffer_read: None,
    auto_freeze_after: None,
}
